fixed small layout issues

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -834,6 +834,7 @@ select option {
     #quick-links-section {
         grid-template-columns: repeat(3, 110px);
         grid-gap: 11px;
+        min-height: 205px;
     }
 
     #stock-section.stock-section {
@@ -863,7 +864,7 @@ select option {
     #quick-links-section {
         grid-gap: 8px;
         width: 90%;
-        min-height: 200px;
+        min-height: 205px;
     }
 
     .quick-link {
